fixed overflow on headings and shortened the transition duration

--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -64,6 +64,7 @@
   }
 
   &__title {
+    @include noOverflow;
     margin-top: 16px;
   }
 
