--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -13,4 +13,4 @@ $link-blue: #4169e1;
 $tablet-breakpoint: 744px;
 $desktop-breakpoint: 1260px;
 //transitions
-$transition-duration: 1s;
+$transition-duration: 0.5s;
